--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,3 +30,29 @@ jobs:
         
       - name: Display Maven version
         run: mvn -version
+  
+  # Stage 2: Code Quality - Linting
+  checkstyle:
+    name: Code Quality - Checkstyle Linting
+    runs-on: ubuntu-latest
+    needs: checkout-setup
+    steps:
+      - name: Checkout source code
+        uses: actions/checkout@v4
+        
+      - name: Set up JDK ${{ env.JAVA_VERSION }}
+        uses: actions/setup-java@v4
+        with:
+          java-version: ${{ env.JAVA_VERSION }}
+          distribution: 'temurin'
+          cache: maven
+          
+      - name: Run Checkstyle
+        run: mvn checkstyle:check
+        
+      - name: Upload Checkstyle Report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: checkstyle-report
+          path: target/checkstyle-result.xml
