--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,3 +90,30 @@ jobs:
         uses: github/codeql-action/analyze@v3
         with:
           category: "/language:java"
+  
+  # Stage 4: SCA - OWASP Dependency Check
+  dependency-check:
+    name: Security - OWASP Dependency Check (SCA)
+    runs-on: ubuntu-latest
+    needs: checkout-setup
+    steps:
+      - name: Checkout source code
+        uses: actions/checkout@v4
+        
+      - name: Set up JDK ${{ env.JAVA_VERSION }}
+        uses: actions/setup-java@v4
+        with:
+          java-version: ${{ env.JAVA_VERSION }}
+          distribution: 'temurin'
+          cache: maven
+          
+      - name: Run OWASP Dependency Check
+        run: mvn dependency-check:check -Ddependency-check.failBuildOnCVSS=7
+        continue-on-error: true
+        
+      - name: Upload Dependency Check Report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: dependency-check-report
+          path: target/dependency-check-report.html
