--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -103,17 +103,9 @@ jobs:
           # Wait for service to be ready
           sleep 10
           
-          # Get service endpoint (adjust based on your service type)
-          SERVICE_IP=$(kubectl get svc payment-gateway-service -n ${{ env.K8S_NAMESPACE }} -o jsonpath='{.status.loadBalancer.ingress[0].ip}' || echo "")
-          
-          if [ -z "$SERVICE_IP" ]; then
-            # If LoadBalancer IP not available, try NodePort
-            NODE_IP=$(kubectl get nodes -o jsonpath='{.items[0].status.addresses[?(@.type=="ExternalIP")].address}' || kubectl get nodes -o jsonpath='{.items[0].status.addresses[?(@.type=="InternalIP")].address}')
-            NODE_PORT=$(kubectl get svc payment-gateway-service -n ${{ env.K8S_NAMESPACE }} -o jsonpath='{.spec.ports[0].nodePort}')
-            SERVICE_URL="http://${NODE_IP}:${NODE_PORT}"
-          else
-            SERVICE_URL="http://${SERVICE_IP}:8080"
-          fi
+          # For Kind cluster, use localhost with NodePort
+          NODE_PORT=$(kubectl get svc payment-gateway-service -n ${{ env.K8S_NAMESPACE }} -o jsonpath='{.spec.ports[0].nodePort}')
+          SERVICE_URL="http://localhost:${NODE_PORT}"
           
           echo "SERVICE_URL=${SERVICE_URL}" >> $GITHUB_OUTPUT
           echo "🌐 Service URL: ${SERVICE_URL}"
